--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "dockerode": "2.5.8",
     "express": "4.17.1",
-    "axios": "0.19.0",
+    "request": "2.88.0",
     "body-parser": "1.19.0"
   }
 }
