--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ services:
   - docker
 
 install:
-  - docker build .
+  - docker build --tag shroomlife/docker-https-proxy:latest .
 
 script:
-  - docker-compose up -d proxy
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker push shroomlife/docker-https-proxy:latest
