--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
   "author": "shroomlife",
   "license": "Apache-2.0",
   "scripts": {
-    "start": "node src/index"
+    "start": "node src/index",
+    "test": "jest"
   },
   "dependencies": {
+    "body-parser": "1.19.0",
     "dockerode": "2.5.8",
     "express": "4.17.1",
-    "request": "2.88.0",
-    "body-parser": "1.19.0"
+    "request": "2.88.0"
+  },
+  "devDependencies": {
+    "jest": "24.9.0"
   }
 }
