--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -15,9 +15,11 @@ jobs:
     - uses: actions/checkout@master
       with:
         ref: master
+    - name: test
+      run: yarn test
     - name: docker build
-      run: docker build . --tag shroomlife/docker-https-proxy:master
+      run: docker build . --tag shroomlife/docker-https-proxy:latest
     - name: docker login
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
     - name: docker push
-      run: docker push shroomlife/docker-https-proxy:master
+      run: docker push shroomlife/docker-https-proxy:latest
