--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "start": "node src/index",
-    "test": "jest"
+    "test": "jest",
+    "build": "docker build . --tag shroomlife/docker-https-proxy"
   },
   "dependencies": {
     "body-parser": "1.19.0",
