--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@master
       with:
         ref: master
+    - name: install
+      run: yarn install
     - name: test
       run: yarn test
     - name: docker build
