--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -15,13 +15,13 @@ jobs:
     - uses: actions/checkout@master
       with:
         ref: master
-    - name: install
+    - name: Install Dependencies
       run: yarn install
-    - name: test
+    - name: Start Test with Jest
       run: yarn test
-    - name: docker build
+    - name: Build Docker Image shroomlife/docker-https-proxy:latest
       run: docker build . --tag shroomlife/docker-https-proxy:latest
-    - name: docker login
+    - name: Login to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-    - name: docker push
+    - name: Push Docker Image to Hub
       run: docker push shroomlife/docker-https-proxy:latest
