--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -17,7 +17,9 @@ jobs:
         ref: master
     - name: Install Dependencies
       run: yarn install
-    - name: Start Test with Jest
+    - name: Start ESLint Test
+      run: yarn lint
+    - name: Start Server Test
       run: yarn test
     - name: Build Docker Image shroomlife/docker-https-proxy:latest
       run: docker build . --tag shroomlife/docker-https-proxy:latest
