--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docker-https-proxy",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "a simple docker container to proxy requests inside your docker network",
   "repository": "https://github.com/shroomlife/docker-https-proxy",
   "author": "shroomlife",
@@ -9,13 +9,12 @@
     "start": "node src/index",
     "dev": "nodemon src/index",
     "test": "jest",
+    "lint": "eslint ./src/**/*.js",
     "build": "docker build . --tag shroomlife/docker-https-proxy:latest"
   },
   "dependencies": {
     "body-parser": "1.19.0",
-    "dockerode": "2.5.8",
-    "express": "4.17.1",
-    "request": "2.88.0"
+    "express": "4.17.1"
   },
   "devDependencies": {
     "jest": "24.9.0",
