--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "handlebars": ">= 4.3.0",
     "acorn": ">= 6.4.1",
     "minimist": ">= 1.2.2",
-    "kind-of": ">= 6.0.3"
+    "kind-of": ">= 6.0.3",
+    "lodash": ">= 4.17.19"
   }
 }
